cheapest-tickets-hub-core/css/default.css
/*
** Bootstrap over-rides
*/

body {
	display: flex;
	height: 100%;
	flex-direction: column;
	min-height: 100vh;
}
.page-content {
	flex: 1 0 auto;
}
footer {
	flex-shrink: 0;
}
.homepage-blog-posts .post-image-container img {
    height: 200px;
}
body {
	font-family: 'Open Sans', sans-serif;
    color: #000;
	line-height: 1.5;
}
h1 {
	font-size: 30px;
}
a, a:hover{
	text-decoration: none;
}
.container{
	margin: 0 auto;
}
.titles {
    margin: 0 0 20px;
    font-size: 18px;
    font-weight: 600;
    letter-spacing: 0;
}

.subcategories {
    border-bottom: 1px solid #ececec;
    padding: 0 0 30px;
}
.subcategories > ul > li > a {
    color: #000;
    text-decoration: none;
    display: block;
    -webkit-transition: all .25s ease-out;
    transition: all .25s ease-out;
}
.subcategories > ul > li > a:hover {
    opacity: 0.8;
}
.subcategories > ul > li span.name {
    color: #000;
    font-size: 14px;
    font-weight: 600;
    text-transform: uppercase;
}

.category-products {
    padding: 35px 0 30px;
}
.category-actions {
    padding: 0;
    margin: 0 0 20px 0;
    border: none;
}



@media (min-width: 1200px) {
    .container {
        width: 1200px;
    }
}
.form-control {
    color: #000;
    font-family: 'Open Sans', sans-serif;
    font-size: 13px;
    height: 36px;
    padding: 7px 12px;
}
.form-control.search-text {
     border-color: #ececec;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.btn {
    font-size: 13px;
    padding: 8px 12px;
    font-weight: 600;
    text-transform: uppercase;
}
.btn-default {
    border-color: #000;
    /*background-color: transparent;*/
    color: #000;
}
.btn-default:hover,
.btn-default:focus,
.btn-default:hover:focus,
.btn-default.focus {
    color: #fff;
    background-color: #000;
    border-color: #000;
}
.btn-default.btn-inverse,
.btn-primary {
    color: #fff;
    background-color: #000;
    border-color: #000;
}
.btn-default.btn-inverse:hover,
.btn-primary:hover {
	color: #fff;
    background-color: #000;
    border-color: #000;
    opacity: 0.8;
}
#menulinks{
	padding: 0;
	margin: 0;
}
#menulinks li{
	float: left;
	display: inline-block;
}
#menulinks li a{
	display: block;
	color: #fff;
    padding: 10px 20px 10px 0;
}
#menulinks li a:hover{
	color: #ff5832;
}
.search-form-col{
	padding: 0;
	margin-top: 32px;
}
.navbar-wrapper{
	background-color: #0e284e;
}
.navbar.navbar-inverse {
    margin-bottom: 0;
    border: none;
    background-color: transparent;
}
.navbar-inverse .navbar-nav > li > a {
    color: #fff;
	font-weight: 600;
	letter-spacing: 0.025em;
    text-transform: uppercase;
    font-size: 15px;
    line-height: 18px;
    min-height: 50px;
}
.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
    color: #eee;
    background-color: rgba(255,255,255,0.2);
}
.dropdown-menu > li > a {
    font-size: 12px;
    padding: 6px 20px;
    text-transform: uppercase;
}
.navbar-nav > li.dropdown > a:after {
    content: "\f105";
    font-family: "fontello";
    font-size: 18px;
    line-height: 1;
    margin-left: 5px;
    float: right;
}
.navbar-nav > li > .dropdown-menu{
    box-shadow: none;
    left: 100%;
    top: 0px;
}

@media (max-width: 1023px) {
  .navbar-header {
      float: none;
  }
  .navbar-left,.navbar-right {
      float: none !important;
  }
  .navbar-toggle {
      display: block;
  }
  .navbar-collapse.collapse {
      display: none!important;
  }
  .navbar-nav {
      float: none!important;
  }
  .navbar-nav>li {
      float: none;
  }
  .collapse.in{
      display:block !important;
  }
  .navbar-nav .open .dropdown-menu {
        position: static;
        float: none;
        width: auto;
        margin-top: 0;
        background-color: transparent;
        border: 0;
        -webkit-box-shadow: none;
        box-shadow: none;
    }
    .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
        color: #9d9d9d;
    }
    .navbar-nav .open .dropdown-menu > li > a {
        line-height: 20px;
    }
    .navbar-nav .open .dropdown-menu > li > a, .navbar-nav .open .dropdown-menu .dropdown-header {
        padding: 5px 15px 5px 25px;
    }
}
/*
** Template code
*/
.logo {
	position: relative;
    height: 108px;
    width: 100%;
    max-width: 100%;
    overflow: hidden;
    line-height: 1.2;
    background: none;
    padding: 5px;
    display: block;
    z-index: 10;
}
.logo img {
    position: absolute;
    width: auto;
    max-width: 100%;
    height: auto;
    max-height: 100%;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    margin: auto;
    display: block;
}
.logo a:hover img {
    opacity: 0.6;
}
.top-nav {
    border-bottom: 1px solid #ececec;
}
.top-nav ul {
    padding: 19px 0;
    margin: 0;
    list-style: none;
    font-size: 12px;
    line-height: 1;
    font-family: 'Open Sans', sans-serif;
    text-transform: uppercase;
    font-weight: bold;
}
.top-nav ul li {
    float: left;
    margin-right: 10px;
    padding-right: 10px;
    border-right: 1px solid #ececec;
}
.top-nav .useraccount ul {
    float: right;
}
.top-nav ul li:last-child {
    border: none;
    margin: 0;
    padding: 0;
}
.top-nav ul li a {
    color: #666;
}

.site-header {
    background: #14315c;
}

.searchBox {
    padding: 10px 0;
}
.search-form {
    position: relative;
}
input::placeholder {
  color: #000;
}
.search-form .search-text {
	color: #000;
    margin: 0;
    width: 100%;
    height: 41px;
    padding: 0 15px;
    padding-right: 37px;
    font-size: 14px;
    border: none;
    border-radius: 9px;
    font-weight: bold;
}
.search-form .search-submit {
    position: absolute;
    top: 0;
    right: 0;
	padding: 0;
    width: 50px;
    height: 100%;
    text-align: center;
    font-size: 16px;
	border-top-right-radius: 8px;
	border-bottom-right-radius: 8px;
	background-color: #ff5832;
	border-color: #ff5832;
}
.search-form .search-submit:hover{
	background-color: #ff5832;
	border-color: #ff5832;
	opacity: .8;
}
/* ... */

